--- a/.travis.yml
+++ b/.travis.yml
@@ -7,23 +7,22 @@ sudo: required
 
 install:
   - sudo apt-get update -q
-  - sudo apt-get install build-essential
-  - sudo apt-get install dpkg-dev
-  - sudo apt-get install nfs-kernel-server
   - sudo apt-get install -q virtualbox --fix-missing
   - sudo wget -nv https://releases.hashicorp.com/vagrant/2.2.4/vagrant_2.2.4_x86_64.deb
   - sudo dpkg -i vagrant_2.2.4_x86_64.deb
-  - VBoxManage --version
 
 script:
+  - VBoxManage --version
 #  - vagrant init hashicorp/precise64
 #  - vagrant up
-  - cd deb
+  - cd deb/openmediavault
   - fakeroot debian/rules clean binary
 
 addons:
   apt:
     packages:
     - build-essential
+    - dpkg-dev
+    - nfs-kernel-server
     - fakeroot
     - git
