--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ sudo: required
 
 install:
   - sudo apt-get update -q
-  - sudo apt-get install -q virtualbox --fix-missing
+  - sudo apt-get install -q virtualbox virtualbox-dkms linux-headers-generic linux-headers-$(uname -r) --fix-missing
   - sudo wget -nv https://releases.hashicorp.com/vagrant/2.2.4/vagrant_2.2.4_x86_64.deb
   - sudo dpkg -i vagrant_2.2.4_x86_64.deb
 
 script:
   - VBoxManage --version
-#  - vagrant init hashicorp/precise64
+#  - vagrant box add -f --provider virtualbox hashicorp/precise64
 #  - vagrant up
   - cd deb/openmediavault
   - fakeroot debian/rules clean binary
