--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,14 @@ sudo: required
 
 install:
   - sudo apt-get update -q
-  - sudo apt-get install -q virtualbox virtualbox-dkms linux-headers-generic linux-headers-$(uname -r) --fix-missing
+  - sudo apt-get install -q linux-headers-$(uname -r) --fix-missing
   - sudo wget -nv https://releases.hashicorp.com/vagrant/2.2.4/vagrant_2.2.4_x86_64.deb
   - sudo dpkg -i vagrant_2.2.4_x86_64.deb
 
 script:
   - VBoxManage --version
-#  - vagrant box add -f --provider virtualbox hashicorp/precise64
-#  - vagrant up
+  - vagrant box add -f --provider virtualbox hashicorp/precise64
+  - vagrant up
   - cd deb/openmediavault
   - fakeroot debian/rules clean binary
 
@@ -27,3 +27,6 @@ addons:
     - nfs-kernel-server
     - fakeroot
     - git
+    - virtualbox
+    - virtualbox-dkms
+    - linux-headers-generic
